--- a/_posts/2018-04-08-恋が咲く季節.md
+++ b/_posts/2018-04-08-恋が咲く季節.md
@@ -4,19 +4,19 @@ layout: post
 categories: ''
 tags: ''
 ---
-<p>歌：6期总选分属性前3名（<font color="#33d5ac">高垣楓</font> <font color="#fac217">本田未央</font> <font color="#00a2e8">藤原肇</font> <font color="#007ac5">荒木比奈</font> <font color="#f59c00">喜多見柚</font> <font color="#e11682">佐久間まゆ</font> <font color="#ed7101">村上巴</font> <font color="#ff007f">関裕美</font> <font color="#73bd5a">緒方智絵里</font>）</p>
+<p>歌：6期总选分属性前3名（<font color="#33d5ac">高垣楓</font> <font color="#fac217">本田未央</font> <font color="#00a2e8">藤原肇</font> <font color="#007ac5">荒木比奈</font> <font color="#f59c00">喜多見柚</font> <font color="#e11682">佐久間まゆ</font> <font color="#ed7101">村上巴</font> <font color="#d85299">関裕美</font> <font color="#73bd5a">緒方智絵里</font>）</p>
 
 <p>分组标记：【A组】<font color="#33d5ac">高垣楓</font> <font color="#fac217">本田未央</font> <font color="#00a2e8">藤原肇</font><br />
 　　　　　【B组】<font color="#007ac5">荒木比奈</font> <font color="#f59c00">喜多見柚</font> <font color="#e11682">佐久間まゆ</font><br />
-　　　　　【C组】<font color="#ed7101">村上巴</font> <font color="#ff007f">関裕美</font> <font color="#73bd5a">緒方智絵里</font></p>
+　　　　　【C组】<font color="#ed7101">村上巴</font> <font color="#d85299">関裕美</font> <font color="#73bd5a">緒方智絵里</font></p>
 
 <p>【A】花びらが咲く頃 一目惚れを感じて<br />
-　　 頬に染めた色を 隠して君に会えるの<br />
+　　  頬に染めた色を 隠して君に会えるの<br />
 【B】真夏の陽射しが降りる 二人だけの空<br />
-　　 見上げていたくて 走り出すDay by day</p>
+　　  見上げていたくて 走り出すDay by day</p>
 
 <p>【C】心地よい風が吹いてく<br />
-　　 季節を掴みたい気持ち<br />
+　　  季節を掴みたい気持ち<br />
 <font color="#33d5ac">ああ… もどかしい時の中 君に会えて</font><br />
 <font color="#fac217">照れずに 言い出したいの</font><br />
 <font color="#00a2e8">「本当は好きです」</font><br />
@@ -36,7 +36,7 @@ tags: ''
 君と見た景色が映る</font><br />
 <font color="#e11682">もう鮮やかな この隠し切れない気持ち</font><br />
 <font color="#ed7101">変わらないものだから</font><br />
-<font color="#ff007f">ずっと見つめて欲しいの</font><br />
+<font color="#d85299">ずっと見つめて欲しいの</font><br />
 <font color="#73bd5a">「私だけ」を！</font></p>
 
 <p>【Cool】つぼみを開いて 迎える恋は<br />
@@ -47,7 +47,7 @@ tags: ''
 <p><font color="#f59c00">だから迷わず行けるの</font><br />
 <font color="#e11682">まだ見たこと無い</font><br />
 <font color="#ed7101">今から始まる</font><br />
-【<font color="#ff007f">裕美</font>+<font color="#73bd5a">智绘里</font>】二人だけの<br />
+【<font color="#d85299">裕美</font>+<font color="#73bd5a">智绘里</font>】二人だけの<br />
 【B&C】未来へ</p>
 
 <p><font color="#33d5ac">どうしてこんなに 好きになったの</font><br />
