--- a/_posts/2018-04-06-夏色えがおで 1,2,Jump!.md
+++ b/_posts/2018-04-06-夏色えがおで 1,2,Jump!.md
@@ -37,9 +37,9 @@ Summer wing
 【9人】(Summer wing)</p>
 
 <p><font color="purple">暑いけど</font><font color="blue">(熱いから)</font><br />
-<font color="darkgray">————————>熱いから</font><font color="yellow">(嬉しくて)</font><br />
-<font color="lime">—————————————————>嬉しくて</font><font color="red">(楽しいね)</font><br />
-<font color="darkorange">——————————————————————————>楽しいね</font><br />
+<font color="darkgray">熱いから</font><font color="yellow">(嬉しくて)</font><br />
+<font color="lime">嬉しくて</font><font color="red">(楽しいね)</font><br />
+<font color="darkorange">楽しいね</font><br />
 Summer day(Summer wing)</p>
 
 <p>【<font color="darkorange">果</font><font color="hotpink">妮</font><font color="red">姬</font>】すれ違って互いにときめく…どうしたんだろう?<br />
@@ -85,7 +85,7 @@ Summer day(Summer wing)</p>
 うなずいてよ(Summer wing)</p>
 
 <p><font color="darkgray">暑いけど</font><font color="red">(熱いから)</font><br />
-<font color="purple">————————>熱いから</font><font color="lime">(嬉しくて)</font><br />
-<font color="cyan">—————————————————>嬉しくて</font><font color="darkorange">(楽しいね)</font><br />
-<font color="hotpink">——————————————————————————>楽しいね</font><br />
+<font color="purple">熱いから</font><font color="lime">(嬉しくて)</font><br />
+<font color="cyan">嬉しくて</font><font color="darkorange">(楽しいね)</font><br />
+<font color="hotpink">楽しいね</font><br />
 Summer day(Summer wing)</p>
