--- a/_posts/2018-04-04-もぎゅっと“love”で接近中！.md
+++ b/_posts/2018-04-04-もぎゅっと“love”で接近中！.md
@@ -4,7 +4,7 @@ layout: post
 ---
 歌：μ's
 
-<font color="saddlebrown">//若无特殊说明，本曲所有括号内的内容均由该行的其余所有人演唱</font>
+<p><font color="saddlebrown">//若无特殊说明，本曲所有括号内的内容均由该行的其余所有人演唱</font></p>
 
 <p><font color="darkgray">だって…</font>(ぎゅっと…)<br />
 <font color="blue">“love”で接近!</font>(もっと!)<br />
