--- a/_posts/2018-04-06-夏色えがおで 1,2,Jump!.md
+++ b/_posts/2018-04-06-夏色えがおで 1,2,Jump!.md
@@ -4,8 +4,8 @@ layout: post
 ---
 歌：μ's
 
-Summer wing
-飛んで Summer wing
+<p>Summer wing<br />
+飛んで Summer wing</p>
 
 <p>【<font color="darkorange">果</font><font color="hotpink">妮</font><font color="red">姬</font>】なぜか見えた明日のときめき…どうしようかな?<br />
 　　　　　つかまえて<br />
