--- a/_posts/2018-04-03-愛してるばんざーい！.md
+++ b/_posts/2018-04-03-愛してるばんざーい！.md
@@ -10,13 +10,13 @@ layout: post
 始まったばかり 明日もよろしくね まだゴールじゃない</p>
 
 <p><font color="darkorange">笑ってよ 悲しいなら吹きとばそうよ</font><br />
-<font color="darkgray">笑えたら変わる景色 晴れ間がのぞく</font><br />
+<font color="silver">笑えたら変わる景色 晴れ間がのぞく</font><br />
 <font color="lime">不安でもしあわせへと繋がる道が</font><br />
 <font color="hotpink">見えてきたよな青空</font></p>
 
 <p>【<font color="red">姬</font><font color="yellow">凛</font><font color="red">妮</font>】時々雨が降るけど水がなくちゃたいへん<br />
 【<font color="darkorange">果</font><font color="blue">海</font><font color="purple">希</font>】乾いちゃだめだよ<br />
-【<font color="darkgray">鸟</font><font color="lime">花</font><font color="cyan">绘</font>】みんなの夢の木よ育て</p>
+【<font color="silver">鸟</font><font color="lime">花</font><font color="cyan">绘</font>】みんなの夢の木よ育て</p>
 
 <p>【9人】さあ!<br />
 大好きだばんざーい!<br />
@@ -29,7 +29,7 @@ layout: post
 <font color="purple">迷ってた答えがない先への道は</font><br />
 <font color="blue">誰も知らない言えない</font></p>
 
-<p>【<font color="darkgray">鸟</font><font color="lime">花</font><font color="cyan">绘</font>】突然嵐のなかへ落ちる銀のひかり<br />
+<p>【<font color="silver">鸟</font><font color="lime">花</font><font color="cyan">绘</font>】突然嵐のなかへ落ちる銀のひかり<br />
 【<font color="red">姬</font><font color="yellow">凛</font><font color="red">妮</font>】怯えちゃだめだよ<br />
 【<font color="darkorange">果</font><font color="blue">海</font><font color="purple">希</font>】みんなの夢の木は強い</p>
 
