--- a/_posts/2018-04-04-もぎゅっと“love”で接近中！.md
+++ b/_posts/2018-04-04-もぎゅっと“love”で接近中！.md
@@ -6,7 +6,7 @@ layout: post
 
 <p><font color="saddlebrown">//若无特殊说明，本曲所有括号内的内容均由该行的其余所有人演唱</font></p>
 
-<p><font color="darkgray">だって…</font>(ぎゅっと…)<br />
+<p><font color="silver">だって…</font>(ぎゅっと…)<br />
 <font color="blue">“love”で接近!</font>(もっと!)<br />
 <font color="yellow">もっと…</font>(だって…)<br />
 <font color="hotpink">ドキリ焦っちゃう!</font>(もっ!ぎゅー!)</p>
@@ -33,23 +33,23 @@ layout: post
 (そして)<font color="yellow">だんだん心に</font><br />
 <font color="hotpink">あまい</font>(夢は)<br />
 <font color="lime">いかが?</font>(夢を)<br />
-<font color="darkgray">めしあがれ</font></p>
+<font color="silver">めしあがれ</font></p>
 
 <p>嬉しい?愛しい?<br />
 世界一ハッピーな恋<br />
 見せて見せてっどうか見せてっ<br />
 うんと、がんばっちゃう!<br />
 嬉しい?愛しい?いじらしい?<br />
-【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】すきよ…【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】(すごく…)【<font color="darkorange">果</font><font color="darkgray">鸟</font><font color="blue">海</font>】っすきよ…<br />
-【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】(つかまえて)【<font color="darkorange">果</font><font color="darkgray">鸟</font><font color="blue">海</font>】ぎゅっと【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】(もっと)<br />
+【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】すきよ…【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】(すごく…)【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】っすきよ…<br />
+【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】(つかまえて)【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】ぎゅっと【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】(もっと)<br />
 【9人】私を見て<br />
 “love”で接近!だって大好き</p>
 
 <p><font color="blue">なにか違うどきどき</font><br />
 <font color="darkorange">だれを誘う知りたい</font><br />
-<font color="darkgray">あくまでも“pure”☆“pure”</font><br />
+<font color="silver">あくまでも“pure”☆“pure”</font><br />
 <font color="blue">やっぱ…</font>【果鸟】(ヘンね)<br />
-【<font color="darkorange">果</font><font color="darkgray">鸟</font><font color="blue">海</font>】顔赤い</p>
+【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】顔赤い</p>
 
 <p>【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】恋は魔法いまから　始めましょふたりで!<br />
 【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】ハジライも勇気で<br />
@@ -68,15 +68,15 @@ layout: post
 見えた見えたっみらい見えたっ<br />
 ほんと、こうなっちゃう?<br />
 あげたい!決めたい!浮かれたい!<br />
-【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】いてね…【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】(ここに…)【<font color="darkorange">果</font><font color="darkgray">鸟</font><font color="blue">海</font>】いてね…<br />
-【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】(うろたえちゃ)【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】やなの【<font color="darkorange">果</font><font color="darkgray">鸟</font><font color="blue">海</font>】(だから)<br />
+【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】いてね…【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】(ここに…)【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】いてね…<br />
+【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】(うろたえちゃ)【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】やなの【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】(だから)<br />
 【9人】私と来て<br />
 “pure”な冒険!やっぱ恋でしょ</p>
 
 <p><font color="purple">ヘンね…</font>(やっぱ…)<br />
 <font color="blue">“pure”な冒険!</font>(ぴゅっと!)<br />
 <font color="lime">ヘンね…</font>(やっぱ…)<br />
-<font color="darkgray">クラリ困っちゃう</font>(ぱっ!ぴゅー!)</p>
+<font color="silver">クラリ困っちゃう</font>(ぱっ!ぴゅー!)</p>
 
 <p>(ぎゅっと…<br />
 もっぎゅー！<br />
@@ -112,14 +112,14 @@ layout: post
 (I love you)<br />
 いじらしい?<br />
 (I miss you)<br />
-【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】すきよ…【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】(すごく…)【<font color="darkorange">果</font><font color="darkgray">鸟</font><font color="blue">海</font>】っすきよ…<br />
+【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】すきよ…【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】(すごく…)【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】っすきよ…<br />
 (hold me tight I need you)<br />
-【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】(つかまえて)【<font color="darkorange">果</font><font color="darkgray">鸟</font><font color="blue">海</font>】ぎゅっと【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】(もっと)<br />
+【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】(つかまえて)【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】ぎゅっと【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】(もっと)<br />
 <font color="darkorange">私を見て</font><br />
 “love”で接近!だって大好き</p>
 
 <p><font color="blue">もっと</font>(ぎゅっと…)<br />
-<font color="darkgray">もっとぎゅっと</font>(もっ!ぎゅー!)<br />
+<font color="silver">もっとぎゅっと</font>(もっ!ぎゅー!)<br />
 <font color="purple">今日は</font>(今日は)<br />
 <font color="blue">ドキリ焦っちゃう!</font>(もっ!ぎゅー!)</p>
 
