--- a/_posts/2018-04-09-友情ノーチェンジ.md
+++ b/_posts/2018-04-09-友情ノーチェンジ.md
@@ -9,7 +9,7 @@ layout: post
 友情ノーチェンジ だいじょうぶだよ</p>
 
 <p><font color="lime">好きになるとわかる</font><br />
-<font color="darkgray">ステキなものわかるから</font><br />
+<font color="silver">ステキなものわかるから</font><br />
 <font color="cyan">どんな時も絶対に離さないように</font></p>
 
 <p><font color="yellow">無くしてからわかる</font><br />
@@ -26,11 +26,11 @@ layout: post
 ずっと一緒だと思うんだ</p>
 
 <p><font color="lime">凄いことがしたい</font><br />
-<font color="darkgray">新しさをみたいよね</font><br />
+<font color="silver">新しさをみたいよね</font><br />
 <font color="cyan">あわてないで直感は間違っちゃいない</font></p>
 
 <p><font color="yellow">難しいとめげる</font><font color="lime">(めげないでね)</font><br />
-<font color="purple">根気だしてみようかな</font><font color="darkgray">(そうだ)</font><br />
+<font color="purple">根気だしてみようかな</font><font color="silver">(そうだ)</font><br />
 <font color="darkorange">続けないと成功は遠くへ逃げる</font></p>
 
 <p><font color="blue">取りあえず敵は自分の弱気かな?</font><br />
