--- a/_posts/2018-04-10-僕らのLIVE 君とのLIFE.md
+++ b/_posts/2018-04-10-僕らのLIVE 君とのLIFE.md
@@ -11,7 +11,7 @@ layout: post
 まぶしいあした抱きしめに行こう<br />
 全部叶えよう</p>
 
-<p>【<font color="darkgray">鸟</font><font color="cyan">绘</font>】そうだよ 信じるだけで<br />
+<p>【<font color="silver">鸟</font><font color="cyan">绘</font>】そうだよ 信じるだけで<br />
 <font color="darkorange">ぐんぐん前に進むよ</font><br />
 君が!</p>
 
@@ -31,7 +31,7 @@ layout: post
 きもちがぐっと近づく意味が<br />
 すぐに伝わるよ</p>
 
-<p>【<font color="darkgray">鸟</font><font color="cyan">绘</font>】そうだね 誰もがひとつ<br />
+<p>【<font color="silver">鸟</font><font color="cyan">绘</font>】そうだね 誰もがひとつ<br />
 <font color="darkorange">持ってる勇気の欠片は</font><br />
 君と!<br />
 一緒だってば ずっとね</p>
@@ -39,7 +39,7 @@ layout: post
 <p>思い付きでいいから追いかけて<br />
 こころ踊る場所を探そう<br />
 <font color="cyan">躓いて起き上がって</font><br />
-<font color="darkgray">見つめあえる嬉しい冒険</font><br />
+<font color="silver">見つめあえる嬉しい冒険</font><br />
 笑顔はどこまで届くかな<br />
 約束とかいらないけど<br />
 いつまでも君といたい<br />
