--- a/_posts/2018-02-11-輝夜の城で踊りたい.md
+++ b/_posts/2018-02-11-輝夜の城で踊りたい.md
@@ -4,7 +4,7 @@ layout: post
 ---
 歌：μ's
 
-<font color="saddlebrown">//本曲中的“Ha!”等没有标注在内，请自行查阅call本</font>
+<p><font color="saddlebrown">//本曲中的“Ha!”等没有标注在内，请自行查阅call本</font></p>
 
 <p>【<font color="purple">希</font><font color="cyan">绘</font><font color="lime">花</font>】おいで! おいで! 誘惑の Dance again<br />
 　　　　　おいでよおいで! 輝夜の城へ<br />
