--- a/_posts/2017-12-22-僕たちはひとつの光.md
+++ b/_posts/2017-12-22-僕たちはひとつの光.md
@@ -4,9 +4,9 @@ layout: post
 ---
 歌：μ's
 
-<p><font color="darkorange">Ah！<span style="font-weight:550">ほのか</span>な予感から始まり</font><br />
-<font color="purple">Ah！<span style="font-weight:550">希望</span>が</font> <font color="yellow"><span style="font-weight:550">星空</span>駈けて</font><br />
-<font color="lime"><span style="font-weight:550">花</span>を咲かせる</font> <font color="hotpink"><span style="font-weight:550">にっこ</span>り笑顔は</font><br />
+<p><font color="darkorange">Ah！<b>ほのか</b>な予感から始まり</font><br />
+<font color="purple">Ah！<b>希望</b>が</font> <font color="yellow"><b>星空</b>駈けて</font><br />
+<font color="lime"><b>花</b>を咲かせる</font> <font color="hotpink"><b>にっこ</b>り笑顔は</font><br />
 【<font color="blue">海</font><font color="cyan">绘</font>】ずっと同じさ【<font color="silver">鸟</font><font color="red">姬</font>】友情の笑顔</p>
 
 <p>【<font color="silver">鸟</font><font color="cyan">绘</font><font color="purple">希</font>】忘れない いつまでも忘れない<br />
@@ -14,11 +14,11 @@ layout: post
 【<font color="darkorange">果</font><font color="blue">海</font><font color="red">姬</font>】世界を見つけた喜び【<font color="silver">鸟</font><font color="cyan">绘</font><font color="purple">希</font>】(ともに)<br />
 【<font color="yellow">凛</font><font color="lime">花</font><font color="hotpink">妮</font>】歌おう 最後まで【其余6人】(僕たちはひとつ)</p>
 
-<p>【9人】<span style="font-weight:550">小鳥</span>の翼がついに大きくなって<br />
+<p>【9人】<b>小鳥</b>の翼がついに大きくなって<br />
 旅立ちの日だよ<br />
-遠くへと広がる<span style="font-weight:550">海</span>の色暖かく<br />
-夢の中で描いた<span style="font-weight:550">絵</span>のようなんだ<br />
-切なくて時を<span style="font-weight:550">まき</span>もどしてみるかい？<br />
+遠くへと広がる<b>海</b>の色暖かく<br />
+夢の中で描いた<b>絵</b>のようなんだ<br />
+切なくて時を<b>まき</b>もどしてみるかい？<br />
 No no no いまが最高！</p>
 
 <p>【<font color="darkorange">果</font><font color="blue">海</font><font color="red">姬</font>】みんなと出会えたこと嬉しくて<br />
@@ -34,11 +34,11 @@ No no no いまが最高！</p>
 素敵だった未来に繋がった夢<br />
 夢の未来 君と僕のLIVE&LIFE</p>
 
-<p><span style="font-weight:550">小鳥</span>の翼がついに大きくなって<br />
+<p><b>小鳥</b>の翼がついに大きくなって<br />
 旅立ちの日だよ<br />
-遠くへと広がる<span style="font-weight:550">海</span>の色暖かく<br />
-夢の中で描いた<span style="font-weight:550">絵</span>のようなんだ<br />
-切なくて時を<span style="font-weight:550">まき</span>もどしてみるかい？<br />
+遠くへと広がる<b>海</b>の色暖かく<br />
+夢の中で描いた<b>絵</b>のようなんだ<br />
+切なくて時を<b>まき</b>もどしてみるかい？<br />
 No no no いまが最高！<br />
 だってだって、いまが最高！</p>
 
