--- a/_posts/2017-12-13-恋になりたいAQUARIUM.md
+++ b/_posts/2017-12-13-恋になりたいAQUARIUM.md
@@ -4,7 +4,7 @@ layout: post
 ---
 歌：Aqours
 
-<font color="saddlebrown">//本曲cd版和live版有较大差别，且每次live都略有不同，这里主体采用2nd的分法</font>
+<p><font color="saddlebrown">//本曲cd版和live版有较大差别，且每次live都略有不同，这里主体采用2nd的分法</font></p>
 
 <p>空色カーテン Open! 海色ゲート Welcome!<br />
 <font color="deepskyblue">あ·そ·び·ま·しょう</font></p>
