--- a/_posts/2017-12-08-少女以上の恋がしたい.md
+++ b/_posts/2017-12-08-少女以上の恋がしたい.md
@@ -61,7 +61,7 @@ layout: post
 <font color="purple">ひとり</font>だけじゃ<font color="magenta">できない</font>ことが<br />
 <font color="orange">したくなるのは恋だと思いたいから</font></p>
 
-<p><font color="saddlebrown">//cd版没有这一段，live版限定</font><br />
+<p><font color="saddlebrown">//这一部分是live版限定，cd版没有（直接跳到下面“見てよ見てよ”）</font><br />
 来てよ来てよトナリに<br />
 禁じられた夢見たいの<br />
 そう熱くなんなきゃつまんないよ<br />
