--- a/_posts/2017-12-05-近未来ハッピーエンド.md
+++ b/_posts/2017-12-05-近未来ハッピーエンド.md
@@ -24,7 +24,7 @@ layout: post
 <p><font color="magenta">ふたりきりで鼓動がはじけそう<br />
 想像してみるだけでこわい “ふたりきり”</font><br />
 <font color="deepskyblue">そんな恋にいつか落ちたら<br />
-君にいちばん最初に 打ち明けるからね</p>
+君にいちばん最初に 打ち明けるからね</font></p>
 
 <p><font color="orange">次の手はどうするの？</font>【<font color="deepskyblue">曜</font><font color="magenta">露</font>】(もっと近づいて!)<br />
 <font color="orange">私がハラハラだよ</font><br />
