--- a/_posts/2017-12-08-少女以上の恋がしたい.md
+++ b/_posts/2017-12-08-少女以上の恋がしたい.md
@@ -18,7 +18,7 @@ layout: post
 　　　　会いたくなった今夜なのにね<br />
 　　　　どこにいるの？</p>
 
-<p>【<font color="pink">梨</font><font color="yellow">丸</font><font color="purple">鞠</font>】腹が立っちゃった<br />
+<p>【<font color="pink">梨</font><font color="gold">丸</font><font color="purple">鞠</font>】腹が立っちゃった<br />
 　　　　　私がこんな激しい性格だと<br />
 　　　　　気づかないなんて<br />
 　　　　　あなたを責めたい気分だ！</p>
@@ -29,7 +29,7 @@ layout: post
 だってあなたを知りたい<br />
 ごまかさないで<br />
 私の瞳のなかに灯した<br />
-【其余6人】知らない情熱【<font color="pink">梨</font><font color="yellow">丸</font><font color="limegreen">南</font>】(焦がれたいの)<br />
+【其余6人】知らない情熱【<font color="pink">梨</font><font color="gold">丸</font><font color="limegreen">南</font>】(焦がれたいの)<br />
 【9人】抱きしめて 抱きしめて<br />
 少女以上の恋がしたい﻿</p>
 
@@ -38,7 +38,7 @@ layout: post
 <font color="red">あなたもそうだなんてガッカリだ</font><br />
 【<font color="magenta">露</font><font color="red">黛</font>】しっかりしてよ！</p>
  
-<p>【<font color="pink">梨</font><font color="yellow">丸</font><font color="purple">鞠</font>】なにもかもが素敵！は<br />
+<p>【<font color="pink">梨</font><font color="gold">丸</font><font color="purple">鞠</font>】なにもかもが素敵！は<br />
 　　　　　創作の世界にしかないね<br />
 　　　　　だったらせめてスリルを<br />
 【+<font color="orange">千歌</font>】求めようかな</p>
@@ -49,7 +49,7 @@ layout: post
 もっと深くに触れたい<br />
 憧れだけじゃいられない<br />
 私が強く求める<br />
-【其余6人】あぶない情熱【<font color="pink">梨</font><font color="yellow">丸</font><font color="purple">鞠</font>】(止められない)<br />
+【其余6人】あぶない情熱【<font color="pink">梨</font><font color="gold">丸</font><font color="purple">鞠</font>】(止められない)<br />
 【9人】消さないよ 消さないよ<br />
 少女らしさはもういらない</p>
 
@@ -57,7 +57,7 @@ layout: post
 <font color="orange">ひとり</font>想う <font color="pink">ひとり</font>願う<br />
 <font color="limegreen">ひとり</font>だけじゃ<font color="red">できない</font>ことを<br />
 <font color="deepskyblue">あなたとしたいって いけないこと？</font><br />
-<font color="silver">ひとり</font>想う <font color="yellow">ひとり</font>願う<br />
+<font color="silver">ひとり</font>想う <font color="gold">ひとり</font>願う<br />
 <font color="purple">ひとり</font>だけじゃ<font color="magenta">できない</font>ことが<br />
 <font color="orange">したくなるのは恋だと思いたいから</font></p>
 
@@ -68,7 +68,7 @@ layout: post
 もっと深くに触れたい<br />
 憧れだけじゃいられない<br />
 私が強く求める<br />
-【其余6人】あぶない情熱【<font color="pink">梨</font><font color="yellow">丸</font><font color="purple">鞠</font>】(止められない)<br />
+【其余6人】あぶない情熱【<font color="pink">梨</font><font color="gold">丸</font><font color="purple">鞠</font>】(止められない)<br />
 【9人】消さないよ 消さないよ<br />
 少女らしさはもういらない</p>
 
@@ -84,6 +84,6 @@ layout: post
 
 <p><font color="saddlebrown">//这一部分，cd版和live版有较大差别，具体会在下面注明，请自行选择</font><br />
 <font color="pink">会いたいからきっと</font> 次は <font color="saddlebrown">//原曲为梨子，live为千歌露比</font><br />
-<font color="yellow">触れたくなる</font> あなたは少年のまま？ <font color="saddlebrown">//原曲为花丸，live为果南善子</font><br />
+<font color="gold">触れたくなる</font> あなたは少年のまま？ <font color="saddlebrown">//原曲为花丸，live为果南善子</font><br />
 <font color="purple">会いたいからきっと</font> 次は <font color="saddlebrown">//原曲为鞠莉，live为曜黛雅果南</font><br />
 少女以上で あなたも恋に触れて</p>
